cmake_minimum_required(VERSION 2.6)

# Specify where to copy executables when 'make install' is run
SET( INSTALL_DIR ${CMAKE_INSTALL_PREFIX} )

PROJECT(VTKPCLConversions)

# VTK
FIND_PACKAGE(VTK REQUIRED)

# PCL
FIND_PACKAGE(PCL 1.1 REQUIRED)
INCLUDE(${VTK_USE_FILE})
INCLUDE_DIRECTORIES(${PCL_INCLUDE_DIRS} ${VTK_INCLUDE_DIRS})

# # Executables
ADD_EXECUTABLE(VTKtoPCL VTKtoPCLExample.cxx)
TARGET_LINK_LIBRARIES(VTKtoPCL vtkHybrid ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES})
set_target_properties(VTKtoPCL PROPERTIES COMPILE_DEFINITIONS "${DEFINITIONS}")
INSTALL( TARGETS VTKtoPCL
  RUNTIME DESTINATION ${INSTALL_DIR} )

ADD_EXECUTABLE(PCLtoVTK PCLtoVTKExample.cxx)
TARGET_LINK_LIBRARIES(PCLtoVTK vtkHybrid ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES})
set_target_properties(PCLtoVTK PROPERTIES COMPILE_DEFINITIONS "${DEFINITIONS}")
INSTALL( TARGETS PCLtoVTK
  RUNTIME DESTINATION ${INSTALL_DIR} )

ADD_EXECUTABLE(BatchConvertPCLtoVTP BatchConvertPCLtoVTP.cxx)
TARGET_LINK_LIBRARIES(BatchConvertPCLtoVTP vtkHybrid ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES})
set_target_properties(BatchConvertPCLtoVTP PROPERTIES COMPILE_DEFINITIONS "${DEFINITIONS}")
INSTALL( TARGETS BatchConvertPCLtoVTP
  RUNTIME DESTINATION ${INSTALL_DIR} )

# Instantiate all of the possible template functions even if they are not used in real examples
# to make sure there are no compiler errors.
ADD_EXECUTABLE(TestInstantiate TestInstantiate.cxx)
TARGET_LINK_LIBRARIES(TestInstantiate vtkHybrid ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES})
