cmake_minimum_required(VERSION 2.6)

# Specify where to copy executables when 'make install' is run
SET( INSTALL_DIR ${CMAKE_INSTALL_PREFIX} )

PROJECT(VTKPCLConversions)

######### Libraries #########
# VTK
FIND_PACKAGE(VTK REQUIRED)
if( "${VTK_MAJOR_VERSION}" LESS 6 )
  MESSAGE(FATAL_ERROR "You must build this code with VTK >= 6.0!")
endif( "${VTK_MAJOR_VERSION}" LESS 6 )

# PCL
FIND_PACKAGE(PCL 1.1 REQUIRED)
INCLUDE(${VTK_USE_FILE})
INCLUDE_DIRECTORIES(${PCL_INCLUDE_DIRS} ${VTK_INCLUDE_DIRS})

######### Examples #########
ADD_EXECUTABLE(VTPtoPCD VTPtoPCD.cpp)
TARGET_LINK_LIBRARIES(VTPtoPCD ${VTK_LIBRARIES} ${PCL_LIBRARIES})
#set_target_properties(VTPtoPCD PROPERTIES COMPILE_DEFINITIONS "${DEFINITIONS}")
INSTALL( TARGETS VTPtoPCD RUNTIME DESTINATION ${INSTALL_DIR} )

ADD_EXECUTABLE(VTStoPCD VTStoPCD.cpp VTKtoPCL.cpp)
TARGET_LINK_LIBRARIES(VTStoPCD ${VTK_LIBRARIES} ${PCL_LIBRARIES})
INSTALL( TARGETS VTStoPCD RUNTIME DESTINATION ${INSTALL_DIR} )

ADD_EXECUTABLE(PCDtoVTP PCDtoVTP.cpp PCLtoVTK.cpp)
TARGET_LINK_LIBRARIES(PCDtoVTP ${VTK_LIBRARIES} ${PCL_LIBRARIES})
#set_target_properties(PCDtoVTP PROPERTIES COMPILE_DEFINITIONS "${DEFINITIONS}")
INSTALL( TARGETS PCDtoVTP RUNTIME DESTINATION ${INSTALL_DIR} )

ADD_EXECUTABLE(PCDtoVTS PCDtoVTS.cpp PCLtoVTK.cpp)
TARGET_LINK_LIBRARIES(PCDtoVTS ${VTK_LIBRARIES} ${PCL_LIBRARIES})
INSTALL( TARGETS PCDtoVTS RUNTIME DESTINATION ${INSTALL_DIR} )

######### Batch Conversions #########
ADD_EXECUTABLE(BatchConvertPCDtoVTP BatchConvertPCDtoVTP.cpp)
TARGET_LINK_LIBRARIES(BatchConvertPCDtoVTP ${VTK_LIBRARIES} ${PCL_LIBRARIES})
#set_target_properties(BatchConvertPCDtoVTP PROPERTIES COMPILE_DEFINITIONS "${DEFINITIONS}")
INSTALL( TARGETS BatchConvertPCDtoVTP RUNTIME DESTINATION ${INSTALL_DIR} )

ADD_EXECUTABLE(BatchConvertVTPtoPCD BatchConvertVTPtoPCD.cpp)
TARGET_LINK_LIBRARIES(BatchConvertVTPtoPCD ${VTK_LIBRARIES} ${PCL_LIBRARIES})
#set_target_properties(BatchConvertVTPtoPCD PROPERTIES COMPILE_DEFINITIONS "${DEFINITIONS}")
INSTALL( TARGETS BatchConvertVTPtoPCD RUNTIME DESTINATION ${INSTALL_DIR} )

######### Instantiations #########
# Instantiate all of the possible template functions even if they are not used in real examples
# to make sure there are no compiler errors.
ADD_EXECUTABLE(TestInstantiate TestInstantiate.cxx PCLtoVTK.cpp VTKtoPCL.cpp)
TARGET_LINK_LIBRARIES(TestInstantiate ${VTK_LIBRARIES} ${PCL_LIBRARIES})

ADD_EXECUTABLE(TestPCDtoVTP TestPCDtoVTP.cpp PCLtoVTK.cpp)
TARGET_LINK_LIBRARIES(TestPCDtoVTP ${VTK_LIBRARIES} ${PCL_LIBRARIES})
